// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LoginForm /> should allow to click on submit button on valid data 1`] = `
<div>
  <form
    data-testid="loginForm"
  >
    <div
      class="css-13oaurc"
    >
      <div
        class="css-1kpkulu"
      >
        
        
        
        <div
          class="css-b40ko7"
        >
          EMAIL
           
          
        </div>
        <input
          autocomplete="off"
          class="css-cfn2p5"
          data-testid="email"
          name="email"
          spellcheck="false"
          type="email"
          value=""
        />
      </div>
      <div
        class="css-1kpkulu"
      >
        
        
        
        <div
          class="css-b40ko7"
        >
          PASSWORD
           
          
        </div>
        <input
          autocomplete="off"
          class="css-cfn2p5"
          data-testid="password"
          name="password"
          spellcheck="false"
          type="password"
          value=""
        />
      </div>
      <button
        class="css-nn62a1"
        data-testid="submitButton"
        style="box-shadow: none; margin-top: 20px;"
        type="submit"
      >
        <span>
          LOGIN
        </span>
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-sign-in-alt fa-w-16 fa-fw "
          data-icon="sign-in-alt"
          data-prefix="fas"
          role="img"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M416 448h-84c-6.6 0-12-5.4-12-12v-40c0-6.6 5.4-12 12-12h84c17.7 0 32-14.3 32-32V160c0-17.7-14.3-32-32-32h-84c-6.6 0-12-5.4-12-12V76c0-6.6 5.4-12 12-12h84c53 0 96 43 96 96v192c0 53-43 96-96 96zm-47-201L201 79c-15-15-41-4.5-41 17v96H24c-13.3 0-24 10.7-24 24v96c0 13.3 10.7 24 24 24h136v96c0 21.5 26 32 41 17l168-168c9.3-9.4 9.3-24.6 0-34z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
  </form>
</div>
`;

exports[`<LoginForm /> should allow to click on submit button on valid data 2`] = `
<div>
  <form
    data-testid="loginForm"
  >
    <div
      class="css-13oaurc"
    >
      <div
        class="css-1kpkulu"
      >
        
        
        
        <div
          class="css-b40ko7"
        >
          EMAIL
           
          
        </div>
        <input
          autocomplete="off"
          class="css-cfn2p5"
          data-testid="email"
          name="email"
          spellcheck="false"
          type="email"
          value="test@example.com"
        />
      </div>
      <div
        class="css-1kpkulu"
      >
        
        
        
        <div
          class="css-b40ko7"
        >
          PASSWORD
           
          
        </div>
        <input
          autocomplete="off"
          class="css-cfn2p5"
          data-testid="password"
          name="password"
          spellcheck="false"
          type="password"
          value="demo"
        />
      </div>
      <button
        class="css-nn62a1"
        data-testid="submitButton"
        style="box-shadow: none; margin-top: 20px;"
        type="submit"
      >
        <span>
          LOGIN
        </span>
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-sign-in-alt fa-w-16 fa-fw "
          data-icon="sign-in-alt"
          data-prefix="fas"
          role="img"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M416 448h-84c-6.6 0-12-5.4-12-12v-40c0-6.6 5.4-12 12-12h84c17.7 0 32-14.3 32-32V160c0-17.7-14.3-32-32-32h-84c-6.6 0-12-5.4-12-12V76c0-6.6 5.4-12 12-12h84c53 0 96 43 96 96v192c0 53-43 96-96 96zm-47-201L201 79c-15-15-41-4.5-41 17v96H24c-13.3 0-24 10.7-24 24v96c0 13.3 10.7 24 24 24h136v96c0 21.5 26 32 41 17l168-168c9.3-9.4 9.3-24.6 0-34z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
  </form>
</div>
`;

exports[`<LoginForm /> should render without crash 1`] = `
<div>
  <form
    data-testid="loginForm"
  >
    <div
      class="css-13oaurc"
    >
      <div
        class="css-1kpkulu"
      >
        
        
        
        <div
          class="css-b40ko7"
        >
          EMAIL
           
          
        </div>
        <input
          autocomplete="off"
          class="css-cfn2p5"
          data-testid="email"
          name="email"
          spellcheck="false"
          type="email"
          value=""
        />
      </div>
      <div
        class="css-1kpkulu"
      >
        
        
        
        <div
          class="css-b40ko7"
        >
          PASSWORD
           
          
        </div>
        <input
          autocomplete="off"
          class="css-cfn2p5"
          data-testid="password"
          name="password"
          spellcheck="false"
          type="password"
          value=""
        />
      </div>
      <button
        class="css-nn62a1"
        data-testid="submitButton"
        style="box-shadow: none; margin-top: 20px;"
        type="submit"
      >
        <span>
          LOGIN
        </span>
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-sign-in-alt fa-w-16 fa-fw "
          data-icon="sign-in-alt"
          data-prefix="fas"
          role="img"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M416 448h-84c-6.6 0-12-5.4-12-12v-40c0-6.6 5.4-12 12-12h84c17.7 0 32-14.3 32-32V160c0-17.7-14.3-32-32-32h-84c-6.6 0-12-5.4-12-12V76c0-6.6 5.4-12 12-12h84c53 0 96 43 96 96v192c0 53-43 96-96 96zm-47-201L201 79c-15-15-41-4.5-41 17v96H24c-13.3 0-24 10.7-24 24v96c0 13.3 10.7 24 24 24h136v96c0 21.5 26 32 41 17l168-168c9.3-9.4 9.3-24.6 0-34z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
  </form>
</div>
`;
